Added more documentation and generated http client
