# product-api/handlers/get.go
@@ -18,10 +18,10 @@ import (
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(c *gin.Context) {
 	prods := data.GetProducts()
-	c.JSON(http.StatusFound, prods)
+	c.JSON(http.StatusOK, prods)
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Return a list of products from the database
 // responses:
 //	200: productResponse
@@ -41,11 +41,11 @@ func (p *Products) ListSingle(c *gin.Context) {
 	prod, err := data.GetProductByID(id)
 	if errors.Is(err, data.ErrProductNotFound) {
 		p.l.Println("Product Not Found")
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Product Not Found"})
+		c.JSON(http.StatusNotFound, gin.H{"error": "Product Not Found"})
 		return
 	} else if err != nil {
-		p.l.Println("Product Not Found")
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Product Not Found"})
+		p.l.Println("Internal Server Error")
+		c.JSON(http.StatusNotFound, gin.H{"error": "Product Not Found"})
 		return
 	}
 
