# product-api/handlers/post.go
@@ -7,20 +7,22 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// swagger:route POST /products products createProduct
-// Create a new product
-//
-// responses:
-//	200: productResponse
-//  422: errorValidation
-//  501: errorResponse
+/*
+swagger:route POST /products products createProduct
+Create a new product
 
-// Create handles POST requests to add new products
+responses:
+201: noContentResponse
+422: errorValidation
+500: errorResponse
+
+Create handles POST requests to add new products
+*/
 func (p *Products) Create(c *gin.Context) {
 	prod, _ := c.Get("product")
 	//Type assertion
 	var pr *data.Product = prod.(*data.Product)
 
-	c.String(http.StatusOK, "Added new product")
+	c.String(http.StatusCreated, "Added new product")
 	data.AddProduct(*pr)
 }
