# product-api/swagger.yaml
@@ -1,59 +1,13 @@
-definitions:
-    GenericError:
-        description: GenericError is a generic error message returned by a server
-        properties:
-            message:
-                type: string
-                x-go-name: Message
-        type: object
-        x-go-package: github.com/Danik14/microservices/handlers
-    Product:
-        description: Product defines the structure for an API product
-        properties:
-            description:
-                description: the description for this poduct
-                maxLength: 10000
-                type: string
-                x-go-name: Description
-            id:
-                description: the id for the product
-                format: int64
-                minimum: 1
-                type: integer
-                x-go-name: ID
-            name:
-                description: the name for this poduct
-                maxLength: 255
-                type: string
-                x-go-name: Name
-            price:
-                description: the price for the product
-                format: float
-                minimum: 0.01
-                type: number
-                x-go-name: Price
-            sku:
-                description: the SKU for the product
-                pattern: '[a-z]+-[a-z]+-[a-z]+'
-                type: string
-                x-go-name: SKU
-        required:
-            - name
-            - price
-            - sku
-        type: object
-        x-go-package: github.com/Danik14/microservices/data
-    ValidationError:
-        description: ValidationError is a collection of validation error messages
-        properties:
-            messages:
-                items:
-                    type: string
-                type: array
-                x-go-name: Messages
-        type: object
-        x-go-package: github.com/Danik14/microservices/handlers
-info: {}
+basePath: /
+consumes:
+    - application/json
+host: localhost
+info:
+    description: |-
+        Schemes:
+        http
+    title: Documentation of Microservice API
+    version: 1.0.0
 paths:
     /products:
         get:
@@ -74,14 +28,13 @@ paths:
                   in: body
                   name: Body
                   required: true
-                  schema:
-                    $ref: '#/definitions/Product'
+                  schema: {}
             responses:
-                "200":
-                    $ref: '#/responses/productResponse'
+                "201":
+                    $ref: '#/responses/noContentResponse'
                 "422":
                     $ref: '#/responses/errorValidation'
-                "501":
+                "500":
                     $ref: '#/responses/errorResponse'
             tags:
                 - products
@@ -95,8 +48,23 @@ paths:
                   in: body
                   name: Body
                   required: true
-                  schema:
-                    $ref: '#/definitions/Product'
+                  schema: {}
+            responses:
+                "201":
+                    $ref: '#/responses/noContentResponse'
+                "404":
+                    $ref: '#/responses/errorResponse'
+                "422":
+                    $ref: '#/responses/errorValidation'
+                "500":
+                    $ref: '#/responses/errorResponse'
+            tags:
+                - products
+    /products/{id}:
+        delete:
+            description: Update a products details
+            operationId: deleteProduct
+            parameters:
                 - description: The id of the product for which the operation relates
                   format: int64
                   in: path
@@ -107,28 +75,25 @@ paths:
             responses:
                 "201":
                     $ref: '#/responses/noContentResponse'
+                "400":
+                    $ref: '#/responses/errorResponse'
                 "404":
                     $ref: '#/responses/errorResponse'
-                "422":
-                    $ref: '#/responses/errorValidation'
-            tags:
-                - products
-    /products/{id}:
-        delete:
-            description: Update a products details
-            operationId: deleteProduct
-            responses:
-                "201":
-                    $ref: '#/responses/noContentResponse'
-                "404":
-                    $ref: '#/responses/errorResponse'
-                "501":
+                "500":
                     $ref: '#/responses/errorResponse'
             tags:
                 - products
         get:
             description: Return a list of products from the database
-            operationId: listSingle
+            operationId: listSingleProduct
+            parameters:
+                - description: The id of the product for which the operation relates
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
             responses:
                 "200":
                     $ref: '#/responses/productResponse'
@@ -136,25 +101,20 @@ paths:
                     $ref: '#/responses/errorResponse'
             tags:
                 - products
+produces:
+    - application/json
 responses:
     errorResponse:
         description: Generic error message returned as a string
-        schema:
-            $ref: '#/definitions/GenericError'
     errorValidation:
         description: Validation errors defined as an array of strings
-        schema:
-            $ref: '#/definitions/ValidationError'
     noContentResponse:
         description: No content is returned by this API endpoint
     productResponse:
         description: Data structure representing a single product
-        schema:
-            $ref: '#/definitions/Product'
     productsResponse:
         description: A list of products
         schema:
-            items:
-                $ref: '#/definitions/Product'
+            items: {}
             type: array
 swagger: "2.0"
